--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -23,6 +23,9 @@
 @import 'dirty/hacks';
 
 /* Demo styles */
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   font-family: 'Termina';
@@ -39,6 +42,9 @@ header.main-header {
     color: #000000;
     font-size: 20px;
     font-family: 'Termina';
+    a {
+      color: #000000;
+    }
   }
   .header-actions {
     a {
@@ -96,6 +102,7 @@ main {
         margin-bottom: 49px;
         width: 202px;
         height: 80px;
+        cursor: pointer;
       }
     }
     &.get-pack {
@@ -157,13 +164,22 @@ main {
           .actions {
             margin-top: 32px;
             display: flex;
-            justify-content: flex-start;
+            justify-content: space-between;
             width: 100%;
             .stickers-gen-link {
               display: flex;
               align-items: center;
               margin-left: 30px;
-              .gen-link-input {
+              position: relative;
+              .tooltip {
+                opacity: 0;
+                position: absolute;
+                top: -10px;
+                right: 0;
+                font-size: 12px;
+                transition: opacity 0.5s ease-in;
+              }
+              input.gen-link-input {
                 font-family: 'Lato', sans-serif;
                 border: none;
                 margin-right: 10px;
@@ -217,19 +233,27 @@ main {
               height: 36px;
               padding: 0 8px;
               font-size: 18px;
-              color: #C5C3CC;
+              color: #32354F;
               margin-bottom: 16px;
+              &::placeholder {
+                color: #32354F;
+                opacity: 1; /* Firefox */
+              }
             }
             textarea.form-question-input {
               font-family: 'Lato', sans-serif;
               font-size: 18px;
               background: #F9F9F9;
-              color: #C5C3CC;
+              color: #32354F;
               border: 1px solid #CF87FE;
               height: 154px;
               padding: 12px 10px;
               margin-bottom: 24px;
               resize: none;
+              &::placeholder {
+                color: #32354F;
+                opacity: 1; /* Firefox */
+              }
             }
           }
         }
@@ -251,7 +275,7 @@ main {
         font-size: 18px;
         margin-bottom: 24px;
       }
-      article.privacy-article{
+      article.privacy-article {
         &::-webkit-scrollbar {
           width: 10px;
         }
@@ -322,6 +346,14 @@ button {
     background-color: #A809FF;
     width: 208px;
     border: none;
+    transition: background-color 0.24s linear;
+    cursor: pointer;
+    &:hover {
+      background-color: #CF87FE;
+    }
+    &:focus {
+      outline: none;
+    }
   }
 }
 
@@ -342,6 +374,12 @@ a {
     font-family: 'Termina';
     font-weight: bold;
     color: #000000;
+  }
+}
+
+@media (min-width: 993px) {
+  main section.hero.get-pack .hero-content .stickers-box .actions .stickers-gen-link input.gen-link-input {
+    min-width: 248px;
   }
 }
 
@@ -387,7 +425,7 @@ a {
       padding-right: 30px;
     }
   }
-  main section.hero.get-pack .hero-content .stickers-box{
+  main section.hero.get-pack .hero-content .stickers-box {
     max-width: 563px;
   }
 }
@@ -461,7 +499,7 @@ a {
   }
   main footer.main-footer .footer-content ul li {
     width: auto;
-    a.link-logo{
+    a.link-logo {
       font-size: 18px;
     }
     a.link-primary {
@@ -476,40 +514,40 @@ a {
       overflow-y: scroll;
     }
   }
-  main section.privacy .privacy-content article.privacy-article p{
+  main section.privacy .privacy-content article.privacy-article p {
     font-size: 15px;
   }
-  main section.hero.get-pack .hero-content h3{
+  main section.hero.get-pack .hero-content h3 {
     font-size: 16px;
     max-width: 262px;
   }
-  main section.hero.get-pack .hero-content{
+  main section.hero.get-pack .hero-content {
     top: 74px;
   }
-  main section.hero.get-pack .hero-content .stickers-box{
+  main section.hero.get-pack .hero-content .stickers-box {
     max-width: 320px;
     height: auto;
     padding-left: 14px;
     padding-right: 14px;
     padding-bottom: 32px;
   }
-  main section.hero.get-pack .hero-content .stickers-box .stickers-collection .sticker-container{
+  main section.hero.get-pack .hero-content .stickers-box .stickers-collection .sticker-container {
     width: 80px;
     height: 80px;
     margin: 8px;
   }
-  main section.hero.get-pack .hero-content .stickers-box .actions{
+  main section.hero.get-pack .hero-content .stickers-box .actions {
     flex-direction: column;
     align-items: center;
     padding-left: 10px;
     padding-right: 10px;
-    button{
+    button {
       margin-bottom: 16px;
     }
-    .stickers-gen-link{
+    .stickers-gen-link {
       margin-left: 0;
       width: 100%;
-      input{
+      input {
         width: 100%;
       }
     }
